Game constructor changes and name refactoring.